--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <script src="script1.js"></script>
     <script src="collectiontitle.js"></script>
     <script src="collectionarray.js"></script>
-    <script src="setttitle.js"></script>
+    <script src="settitle.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
