--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                 <div class="modal-body">
                     <input type="text" name="collectiontitle" id="collectiontitle" placeholder="Enter your title">
                 </div>
-                <hr />
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-default" onclick="setcollectiontitle()">Save</button>
+                    <button type="submit" class="btn btn-default" onclick="setcollectiontitle()" data-dismiss="modal">Save</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -94,6 +93,7 @@
     <script src="collectiontitle.js"></script>
     <script src="collectionarray.js"></script>
     <script src="settitle.js"></script>
+    <script src="deleteelement.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
